re PR c++/8805 (compile time regression with many member variables)

PR c++/8805
	* except.c (eh_region_u_cleanup): Add prev_try.
	(expand_eh_region_end_cleanup): Set it.
	(reachable_handlers): Use it to skip over cleanup blocks.


	PR c++/8805
	* g++.dg/eh/cleanup1.C: New test.

From-SVN: r64465